2005-08-25 13:43  Jerome Robert <jeromerobert@users.sourceforge.net>

	* src/org/jcae/viewer3d/post/: DefaultColorMapper.java,
	  Legend.java: Fix support of custom color scale in post-processing
	  display

2005-08-11 17:36  Jerome Robert <jeromerobert@users.sourceforge.net>

	* src/org/jcae/viewer3d/: fd/SimplePlateViewable.java,
	  post/ArrayTool.java, post/ImageViewable.java: Fix ImageViewable
	  (texture pb) and allow to display plates as wireframe

2005-08-10 17:59  Jerome Robert <jeromerobert@users.sourceforge.net>

	* src/org/jcae/viewer3d/post/: ImageViewable.java,
	  QuadPostViewable.java: Add 2 viewable to show colored quads and
	  images
	* src/org/jcae/viewer3d/post/DefaultColorMapper.java: Use blue for
	  small values instead of red
	* src/org/jcae/viewer3d/post/: ColorMapper.java,
	  DefaultColorMapper.java, Legend.java: Use an indexified palette

2005-08-09 10:22  Jerome Robert <jeromerobert@users.sourceforge.net>

	* src/org/jcae/viewer3d/post/: ArrayTool.java, ColorMapper.java,
	  DefaultColorMapper.java, Legend.java: Add classes to manage
	  create a legend for post processing display

2005-07-08 17:16  Jerome Robert <jeromerobert@users.sourceforge.net>

	* src/org/jcae/viewer3d/: fe/amibe/AmibeNodeSelection.java,
	  fe/amibe/AmibeProvider.java, test/Main.java: Add a wrapping class
	  to compute global node IDs from node picking selection.
	* src/org/jcae/viewer3d/ViewBehavior.java, src/org/jcae/viewer3d/fe:
	  Add selection on nodes
	* src/org/jcae/viewer3d/fe/: Display FE beams

2005-07-07 18:22  Jerome Robert <jeromerobert@users.sourceforge.net>

	* doc/specification.html, src/org/jcae/viewer3d/fe/: Add Amibe
	  provider for free and multi edges
	* src/org/jcae/viewer3d/fe/amibe/AmibeDomain.java: Allow to compil
	  on other JVM

2005-05-23 17:01  Jerome Robert <jeromerobert@users.sourceforge.net>

	* src/org/jcae/viewer3d/View.java: Fix freezing when fiting all on
	  an empty scene
